<resources>
    <string name="app_name">Coopers Hooked</string>
    <string name="action_settings">Settings</string>
    <string name="stories">Stories</string>
    <string name="about">About</string>
    <string name="title_activity_stories_menu">StoriesMenu</string>
    <string name="title_activity_story_view">StoryView</string>
    <string name="dad">Dad</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="autoLoadStory">Automatically load stories</string>
    <string name="randomExit">Randomly Exit App</string>
    <string name="title_activity_about">About</string>
    <string name="ifYouDontKnow">If you don\'t know what it is, it\'s an app</string>
    <string name="hurtFeelings">Please don\'t hurt our feelings with your rating</string>
    <string name="games">Games</string>
    <string name="title_activity_games_menu">GamesMenu</string>
    <string name="title_activity_ogrgame">OGRGame</string>
    <string name="snogroadieake">Sn(Og Roadie)ake</string>
    <string name="title_activity_ogrsweeper">OGRSweeper</string>
    <string name="score_0">Score: 0</string>
    <string name="gameOver">Game Over</string>
    <string name="flag"> Flag</string>
    <string name="ogrsSweeper">OG Roadie Sweeper</string>
    <string name="newGame">New Game</string>
    <string name="title_activity_invaders">Invaders</string>
    <string name="encohInvaders">Enoch Invaders</string>
    <string name="title_activity_ogrssettings">OGRSSettings</string>
    <string name="gridWidth">Grid Width</string>
    <string name="gridHeight">Grid Height</string>
    <string name="numBombs">Number of Bombs</string>
    <string name="difficulty">Difficulty</string>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Expert</item>
        <item>Custom</item>
    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="notGotAccount">Not got an account? </string>
    <string name="clickHere">Click Here</string>
    <string name="usernameOrEmail">Username or Email</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
</resources>
